--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -1,6 +1,13 @@
 body, html {
     margin: 0;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
+
+html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
+
 
 #bodyContainer {
     display: flex;
