--- a/css/detailStyle_test.css
+++ b/css/detailStyle_test.css
@@ -100,7 +100,8 @@ a{
 #detailPage{
     background-color: white;
     border: none;
-    width: 1400px;
+    max-width: 1400px;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     /* border-left: solid 0.75px black; */
