--- a/sub_html/iframeStyle.css
+++ b/sub_html/iframeStyle.css
@@ -34,6 +34,7 @@ html{
     margin: 0;
     position: relative;
     width: 1400px;
+    width: 100%;
     /* background: #FFFFFF; */
     /* background: #000000; */
 
@@ -158,7 +159,7 @@ html::-webkit-scrollbar {
 
 .mainTitle_han{
     position: absolute;
-    width: 250px;
+    width: 1000px;
     height: 61px;
     left: 40px;
     top: 120px;
