--- a/css/detailStyle_test.css
+++ b/css/detailStyle_test.css
@@ -13,6 +13,7 @@
 
 body, html{
     margin: 0;
+    /* overflow: hidden; */
 
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -27,6 +28,7 @@ html::-webkit-scrollbar {
 #bodyContainer{
     display: grid; 
     grid-template-columns: 1fr 4fr;
+    /* background-color: black; */
 }
 
 a{
@@ -41,12 +43,13 @@ a{
     border-right: solid 0.75px black;
     height: 100vh;
     margin: 0;
+    background-color: white;
     /* padding-top: 100px; */
     /* width: 100%; */
 }
 
 #category{
-    margin-top: 60px;
+    margin-top: 40px;
     margin-bottom: 20px;
     padding-left: 24px;
     font-size: 22pt;
@@ -104,6 +107,4 @@ a{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    /* border-left: solid 0.75px black; */
-    /* min-width: 100%; */
 }
