--- a/sub_html/iframeStyle.css
+++ b/sub_html/iframeStyle.css
@@ -33,27 +33,32 @@ url(../css/font/FuturaPT/FuturaPT-Medium.woff) format("woff");
 html{
     margin: 0;
     position: relative;
-    width: 1400px;
-    /* background: #FFFFFF; */
-    /* background: #000000; */
 
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */   
 }
 
-
 html::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera*/
+}
+
+body{
+    margin: 0;
 }
 
 
 /* Contact */
 .contact{
     position: absolute;
-    width: 82px;
+    width: 690px;
     height: 35px;
-    left: 710px;
-    top: 310px;
+    /* right: 0px; */
+    top: 308px;
+
+    left: 46.59%;
+    right: 48.03%;
+    /* top: 7.93%; */
+    /* bottom: 91.17%; */
     
     font-family: 'NexonLv2Gothic_Medium';
     font-style: normal;
@@ -68,10 +73,15 @@ html::-webkit-scrollbar {
 
 .instagramID{
     position: absolute;
-    width: 324px;
+    width: 523px;
     height: 23px;
-    left: 894px;
-    top: 309px;
+    /* right: 0px; */
+    top: 307px;
+
+    left: 57.55%;
+    right: 21.19%;
+    /* top: 7.91%; */
+    /* bottom: 91.5%; */
     
     font-family: 'NexonLv2Gothic_Regular';
     font-style: normal;
@@ -87,10 +97,15 @@ html::-webkit-scrollbar {
 /* Designer */
 .designer{
     position: absolute;
-    width: 91px;
+    width: 690px;
     height: 35px;
-    left: 710px;
-    top: 283px;
+    /* right: 0px; */
+    top: 281px;
+
+    left: 46.59%;
+    right: 47.44%;
+    /* top: 7.24%; */
+    /* bottom: 91.86%; */
     
     font-family: 'NexonLv2Gothic_Medium';
     font-style: normal;
@@ -102,14 +117,18 @@ html::-webkit-scrollbar {
 }
 
 
-/* Mapping Time */
 .projectName{
     position: absolute;
-    width: 400px;
+    width: 280px;
     height: 23px;
-    left: 223px;
-    top: 283px;
-    
+    /* left: 208px; */
+    top: 281px;
+
+    left: 13.65%;
+    right: 77.69%;
+    /* top: 7.24%; */
+    /* bottom: 92.17%; */
+
     font-family: 'NexonLv2Gothic_Regular';
     font-style: normal;
     font-weight: normal;
@@ -123,10 +142,16 @@ html::-webkit-scrollbar {
 
 .studentName{
     position: absolute;
-    width: 289px;
+    width: 523px;
     height: 23px;
-    left: 894px;
-    top: 283px;
+    /* right: 0px; */
+    top: 281px;
+
+
+    left: 57.55%;
+    right: 23.49%;
+    /* top: 7.24%;
+    bottom: 92.17%; */
     
     font-family: 'NexonLv2Gothic_Regular';
     font-style: normal;
@@ -141,11 +166,11 @@ html::-webkit-scrollbar {
 
 .mainTitle{
     position: absolute;
-    width: 1000px;
+    width: 614px;
     height: 85px;
-    left: 41px;
-    top: 121px;
-    
+    left: 40px;
+    top: 120px;
+    width: fit-content;
     font-family: "Futura_PT_Demi";
     font-style: normal;
     font-weight: normal;
@@ -160,8 +185,13 @@ html::-webkit-scrollbar {
     position: absolute;
     width: 1000px;
     height: 61px;
-    left: 40px;
+    /* left: 40px; */
     top: 120px;
+
+    left: 2.62%;
+    right: 68.04%;
+    /* top: 3.1%;
+    bottom: 94.73%; */
     
     font-family: "NexonLv2Gothic_Bold";
     font-style: normal;
@@ -176,10 +206,15 @@ html::-webkit-scrollbar {
 
 .category{
     position: absolute;
-    width: 87px;
+    width: 113px;
     height: 23px;
-    left: 41px;
-    top: 309px;
+    /* left: 40px; */
+    top: 307px; 
+
+    left: 2.62%;
+    right: 91.67%;
+    /* top: 7.91%;
+    bottom: 91.5%; */
 
     font-family: 'NexonLv2Gothic_Medium';
     font-style: normal;
@@ -195,10 +230,15 @@ html::-webkit-scrollbar {
 
 .categoryTxt{
     position: absolute;
-    width: 11px;
+    width: 272px;
     height: 23px;
-    left: 223px;
-    top: 309px;
+    /* left: 208px; */
+    top: 307px;
+
+    left: 13.65%;
+    right: 85.63%;
+    /* top: 7.91%;
+    bottom: 91.5%; */
 
     font-family: 'NexonLv2Gothic_Regular';
     font-style: normal;
@@ -214,10 +254,15 @@ html::-webkit-scrollbar {
 
 .project{
     position: absolute;
-    width: 69px;
+    width: 90px;
     height: 23px;
-    left: 41px;
-    top: 283px;
+    /* left: 40px; */
+    top: 281px;
+
+    left: 2.62%;
+    right: 92.85%;
+    /* top: 7.24%;
+    bottom: 92.17%; */
 
     font-family: 'NexonLv2Gothic_Medium';
     font-style: normal;
@@ -235,8 +280,13 @@ html::-webkit-scrollbar {
     position: absolute;
     width: 843px;
     height: 82px;
-    left: 40px;
-    top: 412px;
+    /* left: 40px; */
+    top: 410px;
+
+    left: 2.62%;
+    right: 42.06%;
+    /* top: 10.54%;
+    bottom: 88.08%; */
 
     font-family: 'NexonLv2Gothic_Regular';
     font-style: normal;
