--- a/sub_html/iframeStyle_black.css
+++ b/sub_html/iframeStyle_black.css
@@ -1,252 +1,299 @@
 @font-face {
-font-family: 'Futura_PT_Medium';
-src: url(../css/font/FuturaPT/FuturaPT-MediumObl.eot) format("embedded-opentype"),
-url(../css/font/FuturaPT/FuturaPT-Medium.ttf) format("truetype"),
-url(../css/font/FuturaPT/FuturaPT-Medium.woff) format("woff");
-}
-
-@font-face {
-    font-family: 'Futura_PT_Demi';
-    src: url(../css/font/FuturaPT/FuturaPT-Demi.eot) format("embedded-opentype"),
-    url(../css/font/FuturaPT/FuturaPT-Demi.ttf) format("truetype"),
-    url(../css/font/FuturaPT/FuturaPT-Demi.woff) format("woff");
-}
-
-@font-face {
-    font-family: 'NexonLv2Gothic_Regular';
-    src: url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic.ttf) format("truetype"),
-    url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic.woff) format("woff");
-}
-
-@font-face {
-    font-family: 'NexonLv2Gothic_Medium';
-    src: url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic-Medium.ttf) format("truetype"),
-    url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic-Medium.woff) format("woff");
-}
-
-@font-face {
-    font-family: 'NexonLv2Gothic_Bold';
-    src: url(../css/font/NexonLv2Gothic/NEXON\ Lv2\ Gothic\ Bold.ttf) format("truetype"),
-    url(../css/font/NexonLv2Gothic/NEXON\ Lv2\ Gothic\ Bold.woff) format("woff");
-}
-
-
-
-html{
-    margin: 0;
-    position: relative;
-    width: 1400px;
-    /* background: #FFFFFF; */
-    /* background: white; */
-
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */   
-}
-
-
-html::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera*/
-}
-
-
-/* Contact */
-.contact{
-    position: absolute;
-    width: 82px;
-    height: 35px;
-    left: 710px;
-    top: 310px;
+    font-family: 'Futura_PT_Medium';
+    src: url(../css/font/FuturaPT/FuturaPT-MediumObl.eot) format("embedded-opentype"),
+    url(../css/font/FuturaPT/FuturaPT-Medium.ttf) format("truetype"),
+    url(../css/font/FuturaPT/FuturaPT-Medium.woff) format("woff");
+    }
     
-    font-family: 'NexonLv2Gothic_Medium';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
+    @font-face {
+        font-family: 'Futura_PT_Demi';
+        src: url(../css/font/FuturaPT/FuturaPT-Demi.eot) format("embedded-opentype"),
+        url(../css/font/FuturaPT/FuturaPT-Demi.ttf) format("truetype"),
+        url(../css/font/FuturaPT/FuturaPT-Demi.woff) format("woff");
+    }
     
-    color: white;
-}
-
-
-
-.instagramID{
-    position: absolute;
-    width: 324px;
-    height: 23px;
-    left: 894px;
-    top: 309px;
+    @font-face {
+        font-family: 'NexonLv2Gothic_Regular';
+        src: url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic.ttf) format("truetype"),
+        url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic.woff) format("woff");
+    }
     
-    font-family: 'NexonLv2Gothic_Regular';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
-    /* identical to box height */
+    @font-face {
+        font-family: 'NexonLv2Gothic_Medium';
+        src: url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic-Medium.ttf) format("truetype"),
+        url(../css/font/NexonLv2Gothic/NEXON-Lv2-Gothic-Medium.woff) format("woff");
+    }
     
-    color: white;
-}
-
-
-/* Designer */
-.designer{
-    position: absolute;
-    width: 91px;
-    height: 35px;
-    left: 710px;
-    top: 283px;
+    @font-face {
+        font-family: 'NexonLv2Gothic_Bold';
+        src: url(../css/font/NexonLv2Gothic/NEXON\ Lv2\ Gothic\ Bold.ttf) format("truetype"),
+        url(../css/font/NexonLv2Gothic/NEXON\ Lv2\ Gothic\ Bold.woff) format("woff");
+    }
     
-    font-family: 'NexonLv2Gothic_Medium';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
+    html{
+        margin: 0;
+        position: relative;
     
-    color: white;
-}
-
-
-/* Mapping Time */
-.projectName{
-    position: absolute;
-    width: 200px;
-    height: 23px;
-    left: 223px;
-    top: 283px;
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */   
+    }
     
-    font-family: 'NexonLv2Gothic_Regular';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
-    /* identical to box height */
+    html::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Opera*/
+    }
     
-    color: white;
-}
-
-
-.studentName{
-    position: absolute;
-    width: 289px;
-    height: 23px;
-    left: 894px;
-    top: 283px;
+    body{
+        margin: 0;
+    }
     
-    font-family: 'NexonLv2Gothic_Regular';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
-    /* identical to box height */
     
-    color: white;
-}
-
-
-.mainTitle{
-    position: absolute;
-    width: 1000px;
-    height: 85px;
-    left: 41px;
-    top: 121px;
+    /* Contact */
+    .contact{
+        position: absolute;
+        width: 690px;
+        height: 35px;
+        /* right: 0px; */
+        top: 308px;
     
-    font-family: "Futura_PT_Demi";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 66px;
-    line-height: 85px;
-    /* identical to box height */
+        left: 46.59%;
+        right: 48.03%;
+        /* top: 7.93%; */
+        /* bottom: 91.17%; */
+        
+        font-family: 'NexonLv2Gothic_Medium';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        
+        color: white;
+    }
     
-    color: white;
-}
-
-.mainTitle_han{
-    position: absolute;
-    width: 1000px;
-    height: 61px;
-    left: 40px;
-    top: 120px;
     
-    font-family: "NexonLv2Gothic_Bold";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 54px;
-    line-height: 61px;
-    /* identical to box height */
     
-    color: white;
-}
-
-
-
-.category{
-    position: absolute;
-    width: 87px;
-    height: 23px;
-    left: 41px;
-    top: 309px;
-
-    font-family: 'NexonLv2Gothic_Medium';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
-    /* identical to box height */
-
-    color: white;
-}
-
-
-
-.categoryTxt{
-    position: absolute;
-    width: 11px;
-    height: 23px;
-    left: 223px;
-    top: 309px;
-
-    font-family: 'NexonLv2Gothic_Regular';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
-    /* identical to box height */
-
-    color: white;
-}
-
-
-
-.project{
-    position: absolute;
-    width: 69px;
-    height: 23px;
-    left: 41px;
-    top: 283px;
-
-    font-family: 'NexonLv2Gothic_Medium';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
-    /* identical to box height */
-
-    color: white;
-}
-
-
-
-.explain{
-    position: absolute;
-    width: 843px;
-    height: 82px;
-    left: 40px;
-    top: 412px;
-
-    font-family: 'NexonLv2Gothic_Regular';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 26px;
-    /* or 144% */
-
-    color: white;
-}
+    .instagramID{
+        position: absolute;
+        width: 523px;
+        height: 23px;
+        /* right: 0px; */
+        top: 307px;
+    
+        left: 57.55%;
+        right: 21.19%;
+        /* top: 7.91%; */
+        /* bottom: 91.5%; */
+        
+        font-family: 'NexonLv2Gothic_Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+        
+        color: white;
+    }
+    
+    
+    /* Designer */
+    .designer{
+        position: absolute;
+        width: 690px;
+        height: 35px;
+        /* right: 0px; */
+        top: 281px;
+    
+        left: 46.59%;
+        right: 47.44%;
+        /* top: 7.24%; */
+        /* bottom: 91.86%; */
+        
+        font-family: 'NexonLv2Gothic_Medium';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        
+        color: white;
+    }
+    
+    
+    .projectName{
+        position: absolute;
+        width: 280px;
+        height: 23px;
+        /* left: 208px; */
+        top: 281px;
+    
+        left: 13.65%;
+        right: 77.69%;
+        /* top: 7.24%; */
+        /* bottom: 92.17%; */
+    
+        font-family: 'NexonLv2Gothic_Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+        
+        color: white;
+    }
+    
+    
+    .studentName{
+        position: absolute;
+        width: 523px;
+        height: 23px;
+        /* right: 0px; */
+        top: 281px;
+    
+    
+        left: 57.55%;
+        right: 23.49%;
+        /* top: 7.24%;
+        bottom: 92.17%; */
+        
+        font-family: 'NexonLv2Gothic_Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+        
+        color: white;
+    }
+    
+    
+    .mainTitle{
+        position: absolute;
+        width: 614px;
+        height: 85px;
+        left: 40px;
+        top: 120px;
+        width: fit-content;
+        font-family: "Futura_PT_Demi";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 66px;
+        line-height: 85px;
+        /* identical to box height */
+        
+        color: white;
+    }
+    
+    .mainTitle_han{
+        position: absolute;
+        width: 1000px;
+        height: 61px;
+        /* left: 40px; */
+        top: 120px;
+    
+        left: 2.62%;
+        right: 68.04%;
+        /* top: 3.1%;
+        bottom: 94.73%; */
+        
+        font-family: "NexonLv2Gothic_Bold";
+        font-style: normal;
+        font-weight: bold;
+        font-size: 54px;
+        line-height: 61px;
+        /* identical to box height */
+        
+        color: white;
+    }
+    
+    
+    .category{
+        position: absolute;
+        width: 113px;
+        height: 23px;
+        /* left: 40px; */
+        top: 307px; 
+    
+        left: 2.62%;
+        right: 91.67%;
+        /* top: 7.91%;
+        bottom: 91.5%; */
+    
+        font-family: 'NexonLv2Gothic_Medium';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+    
+        color: white;
+    }
+    
+    
+    
+    .categoryTxt{
+        position: absolute;
+        width: 272px;
+        height: 23px;
+        /* left: 208px; */
+        top: 307px;
+    
+        left: 13.65%;
+        right: 85.63%;
+        /* top: 7.91%;
+        bottom: 91.5%; */
+    
+        font-family: 'NexonLv2Gothic_Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+    
+        color: white;
+    }
+    
+    
+    
+    .project{
+        position: absolute;
+        width: 90px;
+        height: 23px;
+        /* left: 40px; */
+        top: 281px;
+    
+        left: 2.62%;
+        right: 92.85%;
+        /* top: 7.24%;
+        bottom: 92.17%; */
+    
+        font-family: 'NexonLv2Gothic_Medium';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+    
+        color: white;
+    }
+    
+    
+    
+    .explain{
+        position: absolute;
+        width: 843px;
+        height: 82px;
+        /* left: 40px; */
+        top: 410px;
+    
+        left: 2.62%;
+        right: 42.06%;
+        /* top: 10.54%;
+        bottom: 88.08%; */
+    
+        font-family: 'NexonLv2Gothic_Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 26px;
+        /* or 144% */
+    
+        color: white;
+    }
