--- a/sub_html/mappingTime/KimYeeun/KimYeeun.css
+++ b/sub_html/mappingTime/KimYeeun/KimYeeun.css
@@ -1,8 +1,10 @@
 /* 김예은 Mapping Time */
 #canvas{
 position: relative;
-width: 1400px;
-height: 2554px;
+width: 100%;
+padding-bottom: 182.42%;
+
+/* height: 2554px; */
 
 background: #000000;
 }
@@ -12,10 +14,12 @@ background: #000000;
 /* THUMB_Asset 37 */
 .img1{
 position: absolute;
-width: 650px;
-height: 900.65px;
-left: 375px;
-top: 625px;
+width: 46.42%;
+left: 26.79%;
+right: 26.79%;
+top: 24.47%;
+bottom: 40.26%;
+
 
 /* background: url(THUMB_Asset 37.png); */
 
@@ -23,10 +27,11 @@ top: 625px;
 /* CzbSJT */
 .img2{
 position: absolute;
-width: 1320px;
-height: 908.16px;
-left: 40px;
-top: 1546px;
+width: 94.28%;
+left: 2.86%;
+right: 2.86%;
+top: 60.53%;
+bottom: 3.91%;
 
 /* background: url(CzbSJT.png); */
 }
