--- a/sub_html/collectedBook/ParkJuhye/ParkJuhye.css
+++ b/sub_html/collectedBook/ParkJuhye/ParkJuhye.css
@@ -1,8 +1,9 @@
 /* 박주혜_Collected Book */
 #canvas{
 position: relative;
-width: 1400px;
-height: 5474px;
+width: 100%;
+padding-bottom: 391%;
+/* height: 5474px; */
 
 background: #000000;
 
@@ -11,10 +12,12 @@ background: #000000;
 /* 편집-03 1 */
 .img1{
 position: absolute;
-width: 690px;
-height: 792px;
-left: 355px;
-top: 652px;
+width: 49.28%;
+left: 25.36%;
+right: 25.36%;
+top: 11.91%;
+bottom: 73.62%;
+
 
 /* background: url(편집-03.png); */
 }
@@ -22,10 +25,12 @@ top: 652px;
 /* 편집-04 1 */
 .img2{
 position: absolute;
-width: 690px;
-height: 753px;
-left: 355px;
-top: 1524px;
+width: 49.28%;
+left: 25.36%;
+right: 25.36%;
+top: 27.84%;
+bottom: 58.4%;
+
 
 /* background: url(편집-04.png); */
 
@@ -33,10 +38,11 @@ top: 1524px;
 /* 편집-07 1 */
 .img3{
 position: absolute;
-width: 1001px;
-height: 1092px;
-left: 230px;
-top: 3236px;
+width: 71.42%; 
+left: 16.43%;
+right: 12.07%;
+top: 59.12%;
+bottom: 20.94%;
 
 /* background: url(편집-07.png); */
 }
@@ -44,11 +50,11 @@ top: 3236px;
 /* 편집-08 1 */
 .img4{
 position: absolute;
-height: 798px;
-width: 1400px;
-/* left: 1402px; */
-top: 2359px;
-
+width: 100%;
+left: 0%;
+right: 0%;
+top: 43.09%;
+bottom: 42.33%;
 /* background: url(편집-08.png); */
 /* transform: rotate(90deg); */
 }
@@ -56,10 +62,11 @@ top: 2359px;
 /* 편집-05 1 */
 .img5{
 position: absolute;
-height: 966px;
-width: 1400px;
-left: 0px;
-top: 4474px;
+width: 100%;
+left: 0%;
+right: 0%;
+top: 80.53%;
+bottom: 1.83%;
 
 /* background: url(편집-05.png); */
 /* transform: rotate(-90deg); */
