--- a/sub_html/collectedBook/SeongSeulgi/SeongSeulgi.css
+++ b/sub_html/collectedBook/SeongSeulgi/SeongSeulgi.css
@@ -1,8 +1,9 @@
 /* 성슬기_Collected Book */
 #canvas{
 position: relative;
-width: 1400px;
-height: 1730px;
+width: 100%;
+padding-bottom: 123.57%;
+/* height: 1730px; */
 
 background: #FFFFFF;
 }
@@ -10,12 +11,13 @@ background: #FFFFFF;
 /* 2.collected book 1 */
 .img1{
 position: absolute;
-width: 1320px;
-height: 978px;
-left: 40px;
-top: 652px;
+width: 94.28%;
+left: 2.86%;
+right: 2.86%;
+top: 37.69%;
+bottom: 5.78%;
+
 
 /* background: url(2.collected book.png); */
 
 }
-
