--- a/sub_html/iframeStyle_black.css
+++ b/sub_html/iframeStyle_black.css
@@ -187,7 +187,6 @@
         height: 61px;
         left: 40px;
         top: 120px;
-
         
         font-family: "NexonLv2Gothic_Bold";
         font-style: normal;
@@ -226,7 +225,7 @@
     
     .categoryTxt{
         position: absolute;
-        width: 272px;
+        width: fit-content;
         height: 23px;
         /* left: 208px; */
         top: 307px;
@@ -290,6 +289,54 @@
         font-size: 18px;
         line-height: 26px;
         /* or 144% */
+    
+        color: white;
+    }
+    
+    
+    .rawInfo{
+    
+        font-family: 'NexonLv2Gothic_Medium';
+        width: fit-content;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 23px;
+        /* identical to box height */
+        
+        color: white;
+    }
+    
+    .categoryDetail{
+        width: fit-content;
+        font-family: 'NexonLv2Gothic_Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 26px;
+    
+        color: white;
+    }
+    
+    .subTitle{
+        width: fit-content;
+        font-family: 'Futura_PT_Demi';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 46px;
+    
+        color: white;
+    }
+    
+    .subTitle_han{
+        width: fit-content;
+        font-family: 'NexonLv2Gothic_Bold';
+        font-style: normal;
+        font-weight: bold;
+        font-size: 29px;
+        line-height: 33px;
+        /* identical to box height */
     
         color: white;
     }
