--- a/sub_html/groupIdentity/KangJieun/KangJieun.css
+++ b/sub_html/groupIdentity/KangJieun/KangJieun.css
@@ -2,8 +2,8 @@
 #canvas
 {position: relative;
     width: 100%;
-    padding-bottom: 286.85%;
-height: 8412px;
+    padding-bottom: 600.85%;
+/* height: 8412px; */
 
 background: #FFFFFF;
 }
