--- a/css/detailStyle_test.css
+++ b/css/detailStyle_test.css
@@ -108,3 +108,14 @@ a{
     height: 100%;
     margin: 0 auto;
 }
+
+
+
+
+
+
+/* $$$$$$$$$$$$$$ */
+.temptemp{
+    background-color: beige;
+    z-index: 100;
+}
