--- a/sub_html/temp.css
+++ b/sub_html/temp.css
@@ -7,7 +7,7 @@
 html{
     margin: 0;
     position: relative;
-    width: 100%;
+    width: 80vh;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */      
 }
@@ -42,5 +42,7 @@ body{
 
 /* $$$$$$$$$$$$$$ */
 .txt1{
+    position: absolute;
+    top: 400px;
     font-family: 'NexonLv2Gothic_Bold';
 }
